# damon

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/cortado/: Cargo.toml
crates/cortado-core/: Cargo.toml
crates/cortado-core/src/: bridge.rs  config.rs  entity.rs  lib.rs  models.rs  session_log.rs  session_name.rs  slug.rs  store.rs
crates/cortado-git/: Cargo.toml
crates/cortado-git/src/: lib.rs
crates/cortado-git/tests/: repo_sources.rs
crates/cortado-herdr/: Cargo.toml
crates/cortado-herdr/src/: lib.rs
crates/cortado-herdr/tests/: live.rs
crates/cortado-term/: Cargo.toml
crates/cortado-term/src/: lib.rs  workspace.rs
crates/cortado-term/tests/: live_workspace.rs
crates/cortado-tmux/: Cargo.toml
crates/cortado-tmux/src/: lib.rs
crates/cortado-tmux/tests/: live_server.rs
crates/cortado/src/: main.rs
crates/cortado/src/commands/: agent.rs  doctor.rs  init.rs  key.rs  memory.rs  open.rs  sessions.rs  team.rs
crates/cortado/src/tui/: app.rs  mod.rs  popup.rs  snapshot.rs  theme.rs  view.rs
crates/cortado/tests/: bridge_exclude_sync.rs  cli_agent.rs  cli_doctor.rs  cli_hook.rs  cli_init.rs  cli_key.rs  cli_memory.rs  cli_open.rs  cli_team.rs  cli_ui.rs  herdr_cli.rs
crates/damon/: Cargo.toml
crates/damon-core/: Cargo.toml
crates/damon-core/src/: bridge.rs  config.rs  entity.rs  lib.rs  memory.rs  models.rs  session_name.rs  slug.rs  store.rs
crates/damon-git/: Cargo.toml
crates/damon-git/src/: lib.rs
crates/damon-git/tests/: repo_sources.rs
crates/damon-term/: Cargo.toml
crates/damon-term/src/: lib.rs
crates/damon-tmux/: Cargo.toml
crates/damon-tmux/src/: lib.rs
crates/damon-tmux/tests/: live_server.rs
crates/damon/src/: main.rs
crates/damon/src/commands/: agent.rs  doctor.rs  hook.rs  init.rs  key.rs  memory.rs  mod.rs  open.rs  sessions.rs  team.rs
crates/damon/src/tui/: app.rs  event.rs  mod.rs  popup.rs  snapshot.rs  view.rs
crates/damon/tests/: bridge_exclude_sync.rs  cli_agent.rs  cli_doctor.rs  cli_hook.rs  cli_init.rs  cli_key.rs  cli_memory.rs  cli_open.rs  cli_team.rs  cli_ui.rs
docs/: PACKAGING.md
docs/slides/: cortado-guide.html
docs/superpowers/plans/: 2026-07-07-damon-m0-m1.md  2026-07-08-damon-m2.md  2026-07-08-damon-m3.md  2026-07-08-damon-m4.md  2026-07-09-damon-m5.md  2026-07-09-damon-m6.md  2026-07-09-damon-m7.md  2026-07-09-damon-m8.md  2026-07-10-single-window-workspace.md  2026-07-18-herdr-substrate-swap.md
docs/superpowers/specs/: 2026-07-07-damon-orchestrator-design.md  2026-07-08-damon-m3-tui-design.md  2026-07-08-damon-m4-design.md  2026-07-09-damon-m5-design.md  2026-07-09-damon-m6-design.md  2026-07-09-damon-m7-design.md  2026-07-09-damon-m8-design.md  2026-07-10-single-window-workspace-design.md  2026-07-18-herdr-substrate-design.md
examples/teams/content-creator/: README.md  team.toml
examples/teams/content-creator/agents/orchestrator/: agent.toml
examples/teams/content-creator/agents/orchestrator/memory/: AGENT.md
examples/teams/content-creator/agents/qa/: agent.toml
examples/teams/content-creator/agents/qa/memory/: AGENT.md
examples/teams/content-creator/agents/qa/memory/skills/quality-gate/: SKILL.md
examples/teams/content-creator/agents/researcher/: agent.toml
examples/teams/content-creator/agents/researcher/memory/: AGENT.md  MEMORY.md  USER.md
examples/teams/content-creator/agents/writer/: agent.toml
examples/teams/content-creator/agents/writer/memory/: AGENT.md
examples/teams/content-creator/reference/: streetlight-persona.md
examples/teams/sermon-prep/: README.md  team.toml
examples/teams/sermon-prep/agents/content-creator/: agent.toml
examples/teams/sermon-prep/agents/content-creator/memory/: AGENT.md  MEMORY.md  USER.md
examples/teams/sermon-prep/agents/editor/: agent.toml
examples/teams/sermon-prep/agents/editor/memory/: AGENT.md
examples/teams/sermon-prep/agents/orchestrator/: agent.toml
examples/teams/sermon-prep/agents/orchestrator/memory/: AGENT.md
examples/teams/sermon-prep/agents/research-assistant/: agent.toml
examples/teams/sermon-prep/agents/research-assistant/memory/: AGENT.md
examples/teams/sermon-prep/reference/: audiences.md  exegetical-study-dependency.md
extras/ghostty/: Cortado Night  cortado.conf
packaging/aur/: .SRCINFO  PKGBUILD  PUBLISHING.md
(+8 files in other folders)
