[workspace]
resolver = "2"
members = [
  "crates/damon-core",
  "crates/damon-git",
  "crates/damon-tmux",
  "crates/damon-term",
  "crates/damon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
damon-core = { path = "crates/damon-core" }
damon-git = { path = "crates/damon-git" }
damon-tmux = { path = "crates/damon-tmux" }
damon-term = { path = "crates/damon-term" }
