[workspace]
resolver = "2"
members = [
  "crates/cortado-core",
  "crates/cortado-git",
  "crates/cortado-tmux",
  "crates/cortado-term",
  "crates/cortado",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
keyring = "2"
rpassword = "7"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
fs4 = "0.13"
cortado-core = { path = "crates/cortado-core" }
cortado-git = { path = "crates/cortado-git" }
cortado-tmux = { path = "crates/cortado-tmux" }
cortado-term = { path = "crates/cortado-term" }
