[package]
name = "cortado-term"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
cortado-core = { workspace = true }
cortado-tmux = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
