[package]
name = "cortado"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cortado-core = { workspace = true }
cortado-git = { workspace = true }
cortado-herdr = { workspace = true }
cortado-tmux = { workspace = true }
cortado-term = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
rpassword = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
image = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
