[package]
name = "damon-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
