[package]
name = "damon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
damon-core = { workspace = true }
damon-git = { workspace = true }
damon-tmux = { workspace = true }
damon-term = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
rpassword = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
